@@ -120,6 +120,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiRollback' => __DIR__ . '/includes/api/ApiRollback.php',
 	'ApiRsd' => __DIR__ . '/includes/api/ApiRsd.php',
 	'ApiSetNotificationTimestamp' => __DIR__ . '/includes/api/ApiSetNotificationTimestamp.php',
+	'ApiStashEdit' => __DIR__ . '/includes/api/ApiStashEdit.php',
 	'ApiTokens' => __DIR__ . '/includes/api/ApiTokens.php',
 	'ApiUnblock' => __DIR__ . '/includes/api/ApiUnblock.php',
 	'ApiUndelete' => __DIR__ . '/includes/api/ApiUndelete.php',
