@@ -321,6 +321,9 @@ class EditPage {
 	/** @var int */
 	public $oldid = 0;
 
+	/** @var int */
+	public $parentRevId = 0;
+
 	/** @var string */
 	public $editintro = '';
 
@@ -881,6 +884,7 @@ class EditPage {
 		}
 
 		$this->oldid = $request->getInt( 'oldid' );
+		$this->parentRevId = $request->getInt( 'parentRevId' );
 
 		$this->bot = $request->getBool( 'bot', true );
 		$this->nosummary = $request->getBool( 'nosummary' );
@@ -2071,7 +2075,7 @@ class EditPage {
 	}
 
 	function setHeaders() {
-		global $wgOut, $wgUser;
+		global $wgOut, $wgUser, $wgAjaxEditStash;
 
 		$wgOut->addModules( 'mediawiki.action.edit' );
 		$wgOut->addModuleStyles( 'mediawiki.action.edit.styles' );
@@ -2082,6 +2086,10 @@ class EditPage {
 
 		if ( $wgUser->getOption( 'useeditwarning', false ) ) {
 			$wgOut->addModules( 'mediawiki.action.edit.editWarning' );
+		}
+
+		if ( $wgAjaxEditStash ) {
+			$wgOut->addModules( 'mediawiki.action.edit.stash' );
 		}
 
 		$wgOut->setRobotPolicy( 'noindex,nofollow' );
@@ -2448,6 +2456,8 @@ class EditPage {
 		$wgOut->addHTML( Html::hidden( 'wpAutoSummary', $autosumm ) );
 
 		$wgOut->addHTML( Html::hidden( 'oldid', $this->oldid ) );
+		$wgOut->addHTML( Html::hidden( 'parentRevId',
+			$this->parentRevId ?: $this->mArticle->getRevIdFetched() ) );
 
 		$wgOut->addHTML( Html::hidden( 'format', $this->contentFormat ) );
 		$wgOut->addHTML( Html::hidden( 'model', $this->contentModel ) );
@@ -2856,7 +2866,7 @@ class EditPage {
 		global $wgOut;
 		$section = htmlspecialchars( $this->section );
 		$wgOut->addHTML( <<<HTML
-<input type='hidden' value="{$section}" name="wpSection" />
+<input type='hidden' value="{$section}" name="wpSection"/>
 <input type='hidden' value="{$this->starttime}" name="wpStarttime" />
 <input type='hidden' value="{$this->edittime}" name="wpEdittime" />
 <input type='hidden' value="{$this->scrolltop}" name="wpScrolltop" id="wpScrolltop" />
